--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@
 }
 
 body {
+    box-shadow: 0px 15px 25px -10px hsla(245, 75%, 52%, 0.5);
     background-color: var(--clr-primary-pale-blue);
     font-family: var(--ff-red-hat-display);
     height: 100vh;
